test/syntax-errors/arithmetic-on-type.bb

Type Player
End Type

p.Player = New Player

wtf = p + 1
